[tool.poetry]
name = "adv-2022"
version = "1.0.0"
description = "solutions of Advent of Code 2022"
authors = ["piotr.idzik <vil02_adv@10g.pl>"]
readme = "README.md"
packages = [{include = "solutions"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
numpy = "2.3.1"
sympy = "1.14.0"
shapely = "2.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-xdist = "3.8.0"
pylint = "3.3.7"
flake8 = "7.3.0"
coverage = "7.9.1"
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
