[tool.poetry]
name = "adv-2022"
version = "1.0.0"
description = "solutions of Advent of Code 2022"
authors = ["piotr.idzik <vil02_adv@10g.pl>"]
readme = "README.md"
packages = [{include = "solutions"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
numpy = "2.4.2"
sympy = "1.14.0"
shapely = "2.1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-xdist = "3.8.0"
pylint = "4.0.4"
flake8 = "7.3.0"
coverage = "7.13.2"
black = "26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
